[project]
name = "neolockout"
version = "0.1.0"
description = "Competitive programming discord bot"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.5",
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.12.3",
    "discord-py>=2.4.0",
    "humanfriendly>=10.0",
    "lxml>=5.3.0",
    "matplotlib>=3.9.2",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=0.15.0",
]
